--- a/ToyRobotSimulator.Core/ToyRobotSimulator.Core.csproj
+++ b/ToyRobotSimulator.Core/ToyRobotSimulator.Core.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums.cs" />
+    <Compile Include="Command.cs" />
+    <Compile Include="Direction.cs" />
     <Compile Include="Process.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
