--- a/ToyRobotSimulator.UnitTests/ToyRobotSimulator.UnitTests.csproj
+++ b/ToyRobotSimulator.UnitTests/ToyRobotSimulator.UnitTests.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RobotUnitTests.cs" />
+    <Compile Include="TableTopUnitTests.cs" />
     <Compile Include="UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
