feat: Added process testing using sample input

--- a/ToyRobotSimulator.UnitTests/ToyRobotSimulator.UnitTests.csproj
+++ b/ToyRobotSimulator.UnitTests/ToyRobotSimulator.UnitTests.csproj
@@ -44,10 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProcessUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RobotUnitTests.cs" />
     <Compile Include="TableTopUnitTests.cs" />
-    <Compile Include="UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ToyRobotSimulator.Core\ToyRobotSimulator.Core.csproj">
